tools/header.h

typedef double cpFloat;
typedef struct cpVect
{
    cpFloat x, y;
} cpVect;
typedef void *cpDataPointer;
typedef unsigned char cpBool;
typedef struct cpTransform
{
    cpFloat a, b, c, d, tx, ty;
} cpTransform;
typedef struct cpSpace cpSpace;
typedef struct cpArbiter cpArbiter;
typedef struct cpShape cpShape;
typedef struct cpConstraint cpConstraint;
typedef struct cpBody cpBody;
typedef struct cpConstraintClass {
	cpConstraintPreStepImpl preStep;
	cpConstraintApplyCachedImpulseImpl applyCachedImpulse;
	cpConstraintApplyImpulseImpl applyImpulse;
	cpConstraintGetImpulseImpl getImpulse;
} cpConstraintClass;
/// Callback function type that gets called before solving a joint.
// typedef void (*cpConstraintPreSolveFunc)(cpConstraint *constraint, cpSpace *space);
typedef void (*cpConstraintPreSolveFuncD)(cpConstraint *constraint, cpSpace *space, uint64_t callbackId);
/// Callback function type that gets called after solving a joint.
//typedef void (*cpConstraintPostSolveFunc)(cpConstraint *constraint, cpSpace *space);
typedef void (*cpConstraintPostSolveFuncD)(cpConstraint *constraint, cpSpace *space, uint64_t callbackId);
struct cpConstraint {
	const cpConstraintClass *klass;
	
	cpSpace *space;
	
	cpBody *a, *b;
	cpConstraint *next_a, *next_b;
	
	cpFloat maxForce;
	cpFloat errorBias;
	cpFloat maxBias;
	
	cpBool collideBodies;
	
	cpConstraintPreSolveFuncD preSolve;
	cpConstraintPostSolveFuncD postSolve;
	
	cpDataPointer userData;
};
/// Rigid body velocity update function type.
//typedef void (*cpBodyVelocityFunc)(cpBody *body, cpVect gravity, cpFloat damping, cpFloat dt);
typedef void (*cpBodyVelocityFuncD)(cpBody *body, cpVect gravity, cpFloat damping, cpFloat dt, uint64_t callbackId);
/// Rigid body position update function type.
// typedef void (*cpBodyPositionFunc)(cpBody *body, cpFloat dt);
typedef void (*cpBodyPositionFuncD)(cpBody *body, cpFloat dt, uint64_t callbackId);
struct cpBody {
	// Integration functions
	cpBodyVelocityFuncD velocity_func;
	cpBodyPositionFuncD position_func;
	
	// mass and it's inverse
	cpFloat m;
	cpFloat m_inv;
	
	// moment of inertia and it's inverse
	cpFloat i;
	cpFloat i_inv;
	
	// center of gravity
	cpVect cog;
	
	// position, velocity, force
	cpVect p;
	cpVect v;
	cpVect f;
	
	// Angle, angular velocity, torque (radians)
	cpFloat a;
	cpFloat w;
	cpFloat t;
	
	cpTransform transform;
	
	cpDataPointer userData;
	
	// "pseudo-velocities" used for eliminating overlap.
	// Erin Catto has some papers that talk about what these are.
	cpVect v_bias;
	cpFloat w_bias;
	
	cpSpace *space;
	
	cpShape *shapeList;
	cpArbiter *arbiterList;
	cpConstraint *constraintList;
	
	struct {
		cpBody *root;
		cpBody *next;
		cpFloat idleTime;
	} sleeping;
};
struct cpShape
{
    const cpShapeClass *klass;

    cpSpace *space;
    cpBody *body;
    struct cpShapeMassInfo massInfo;
    cpBB bb;

    cpBool sensor;

    cpFloat e;
    cpFloat u;
    cpVect surfaceV;

    cpDataPointer userData;

    cpCollisionType type;
    cpShapeFilter filter;

    cpShape *next;
    cpShape *prev;

    cpHashValue hashid;
};
struct cpArbiter
{
    cpFloat e;
    cpFloat u;
    cpVect surface_vr;

    cpDataPointer data;

    const cpShape *a, *b;
    cpBody *body_a, *body_b;
    struct cpArbiterThread thread_a, thread_b;

    int count;
    struct cpContact *contacts;
    cpVect n;

    // Regular, wildcard A and wildcard B collision handlers.
    cpCollisionHandler *handler, *handlerA, *handlerB;
    cpBool swapped;

    cpTimestamp stamp;
    enum cpArbiterState state;
};
struct cpSpace
{
    int iterations;

    cpVect gravity;
    cpFloat damping;

    cpFloat idleSpeedThreshold;
    cpFloat sleepTimeThreshold;

    cpFloat collisionSlop;
    cpFloat collisionBias;
    cpTimestamp collisionPersistence;

    cpDataPointer userData;

    cpTimestamp stamp;
    cpFloat curr_dt;

    cpArray *dynamicBodies;
    cpArray *staticBodies;
    cpArray *rousedBodies;
    cpArray *sleepingComponents;

    cpHashValue shapeIDCounter;
    cpSpatialIndex *staticShapes;
    cpSpatialIndex *dynamicShapes;

    cpArray *constraints;

    cpArray *arbiters;
    cpContactBufferHeader *contactBuffersHead;
    cpHashSet *cachedArbiters;
    cpArray *pooledArbiters;

    cpArray *allocatedBuffers;
    unsigned int locked;

    cpBool usesWildcards;
    cpHashSet *collisionHandlers;
    cpCollisionHandler defaultHandler;

    cpBool skipPostStep;
    cpArray *postStepCallbacks;

    cpBody *staticBody;
    cpBody _staticBody;
};
//typedef cpFloat (*cpDampedSpringForceFunc)(cpConstraint *spring, cpFloat dist);
typedef cpFloat (*cpDampedSpringForceFuncD)(cpConstraint *spring, cpFloat dist, uint64_t callbackId);
typedef struct cpMat2x2 {
	// Row major [[a, b][c d]]
	cpFloat a, b, c, d;
} cpMat2x2;
typedef struct cpPivotJoint cpPivotJoint;
struct cpPivotJoint {
	cpConstraint constraint;
	cpVect anchorA, anchorB;
	
	cpVect r1, r2;
	cpMat2x2 k;
	
	cpVect jAcc;
	cpVect bias;
};
typedef struct cpPinJoint cpPinJoint;
struct cpPinJoint {
	cpConstraint constraint;
	cpVect anchorA, anchorB;
	cpFloat dist;
	
	cpVect r1, r2;
	cpVect n;
	cpFloat nMass;
	
	cpFloat jnAcc;
	cpFloat bias;
};
typedef struct cpGrooveJoint cpGrooveJoint;
struct cpGrooveJoint {
	cpConstraint constraint;
	cpVect grv_n, grv_a, grv_b;
	cpVect  anchorB;
	
	cpVect grv_tn;
	cpFloat clamp;
	cpVect r1, r2;
	cpMat2x2 k;
	
	cpVect jAcc;
	cpVect bias;
};
 cpFloat cpDampedSpringGetDamping(const cpConstraint *constraint);
 void cpDampedSpringSetDamping(cpConstraint *constraint, cpFloat damping);
 cpDampedSpringForceFuncD cpDampedSpringGetSpringForceFunc(const cpConstraint *constraint);
 void cpDampedSpringSetSpringForceFunc(cpConstraint *constraint, cpDampedSpringForceFuncD springForceFunc, uint64_t callbackId);
 cpBool cpConstraintIsPivotJoint(const cpConstraint *constraint);
 cpPivotJoint* cpPivotJointAlloc(void);
 cpPivotJoint* cpPivotJointInit(cpPivotJoint *joint, cpBody *a, cpBody *b, cpVect anchorA, cpVect anchorB);
 cpConstraint* cpPivotJointNew(cpBody *a, cpBody *b, cpVect pivot);
 cpConstraint* cpPivotJointNew2(cpBody *a, cpBody *b, cpVect anchorA, cpVect anchorB);
 cpVect cpPivotJointGetAnchorA(const cpConstraint *constraint);
 void cpPivotJointSetAnchorA(cpConstraint *constraint, cpVect anchorA);
 cpVect cpPivotJointGetAnchorB(const cpConstraint *constraint);
 void cpPivotJointSetAnchorB(cpConstraint *constraint, cpVect anchorB);
 cpBool cpConstraintIsPinJoint(const cpConstraint *constraint);
 cpPinJoint* cpPinJointAlloc(void);
 cpPinJoint* cpPinJointInit(cpPinJoint *joint, cpBody *a, cpBody *b, cpVect anchorA, cpVect anchorB);
 cpConstraint* cpPinJointNew(cpBody *a, cpBody *b, cpVect anchorA, cpVect anchorB);
 cpVect cpPinJointGetAnchorA(const cpConstraint *constraint);
 void cpPinJointSetAnchorA(cpConstraint *constraint, cpVect anchorA);
 cpVect cpPinJointGetAnchorB(const cpConstraint *constraint);
 void cpPinJointSetAnchorB(cpConstraint *constraint, cpVect anchorB);
 cpFloat cpPinJointGetDist(const cpConstraint *constraint);
 void cpPinJointSetDist(cpConstraint *constraint, cpFloat dist);
 cpBool cpConstraintIsGrooveJoint(const cpConstraint *constraint);
 cpGrooveJoint* cpGrooveJointAlloc(void);
 cpGrooveJoint* cpGrooveJointInit(cpGrooveJoint *joint, cpBody *a, cpBody *b, cpVect groove_a, cpVect groove_b, cpVect anchorB);