lib/src/bindings.dart


  late final _cpDampedSpringGetDampingPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpConstraint>)>>('cpDampedSpringGetDamping');
  late final _cpDampedSpringGetDamping = _cpDampedSpringGetDampingPtr.asFunction<double Function(ffi.Pointer<cpConstraint>)>();

  void cpDampedSpringSetDamping(
    ffi.Pointer<cpConstraint> constraint,
    double damping,
  ) {
    return _cpDampedSpringSetDamping(
      constraint,
      damping,
    );
  }

  late final _cpDampedSpringSetDampingPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpFloat)>>('cpDampedSpringSetDamping');
  late final _cpDampedSpringSetDamping = _cpDampedSpringSetDampingPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, double)>();

  cpDampedSpringForceFuncD cpDampedSpringGetSpringForceFunc(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpDampedSpringGetSpringForceFunc(
      constraint,
    );
  }

  late final _cpDampedSpringGetSpringForceFuncPtr = _lookup<ffi.NativeFunction<cpDampedSpringForceFuncD Function(ffi.Pointer<cpConstraint>)>>('cpDampedSpringGetSpringForceFunc');
  late final _cpDampedSpringGetSpringForceFunc = _cpDampedSpringGetSpringForceFuncPtr.asFunction<cpDampedSpringForceFuncD Function(ffi.Pointer<cpConstraint>)>();

  void cpDampedSpringSetSpringForceFunc(
    ffi.Pointer<cpConstraint> constraint,
    cpDampedSpringForceFuncD springForceFunc,
    int callbackId,
  ) {
    return _cpDampedSpringSetSpringForceFunc(
      constraint,
      springForceFunc,
      callbackId,
    );
  }

  late final _cpDampedSpringSetSpringForceFuncPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpDampedSpringForceFuncD, ffi.Uint64)>>('cpDampedSpringSetSpringForceFunc');
  late final _cpDampedSpringSetSpringForceFunc = _cpDampedSpringSetSpringForceFuncPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, cpDampedSpringForceFuncD, int)>();

  int cpConstraintIsPivotJoint(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintIsPivotJoint(
      constraint,
    );
  }

  late final _cpConstraintIsPivotJointPtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpConstraint>)>>('cpConstraintIsPivotJoint');
  late final _cpConstraintIsPivotJoint = _cpConstraintIsPivotJointPtr.asFunction<int Function(ffi.Pointer<cpConstraint>)>();

  ffi.Pointer<cpPivotJoint> cpPivotJointAlloc() {
    return _cpPivotJointAlloc();
  }

  late final _cpPivotJointAllocPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpPivotJoint> Function()>>('cpPivotJointAlloc');
  late final _cpPivotJointAlloc = _cpPivotJointAllocPtr.asFunction<ffi.Pointer<cpPivotJoint> Function()>();

  ffi.Pointer<cpPivotJoint> cpPivotJointInit(
    ffi.Pointer<cpPivotJoint> joint,
    ffi.Pointer<cpBody> a,
    ffi.Pointer<cpBody> b,
    cpVect anchorA,
    cpVect anchorB,
  ) {
    return _cpPivotJointInit(
      joint,
      a,
      b,
      anchorA,
      anchorB,
    );
  }

  late final _cpPivotJointInitPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<cpPivotJoint> Function(ffi.Pointer<cpPivotJoint>, ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect)>>('cpPivotJointInit');
  late final _cpPivotJointInit = _cpPivotJointInitPtr.asFunction<ffi.Pointer<cpPivotJoint> Function(ffi.Pointer<cpPivotJoint>, ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect)>();

  ffi.Pointer<cpConstraint> cpPivotJointNew(
    ffi.Pointer<cpBody> a,
    ffi.Pointer<cpBody> b,
    cpVect pivot,
  ) {
    return _cpPivotJointNew(
      a,
      b,
      pivot,
    );
  }

  late final _cpPivotJointNewPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpConstraint> Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect)>>('cpPivotJointNew');
  late final _cpPivotJointNew = _cpPivotJointNewPtr.asFunction<ffi.Pointer<cpConstraint> Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect)>();

  ffi.Pointer<cpConstraint> cpPivotJointNew2(
    ffi.Pointer<cpBody> a,
    ffi.Pointer<cpBody> b,
    cpVect anchorA,
    cpVect anchorB,
  ) {
    return _cpPivotJointNew2(
      a,
      b,
      anchorA,
      anchorB,
    );
  }

  late final _cpPivotJointNew2Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<cpConstraint> Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect)>>('cpPivotJointNew2');
  late final _cpPivotJointNew2 = _cpPivotJointNew2Ptr.asFunction<ffi.Pointer<cpConstraint> Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect)>();

  cpVect cpPivotJointGetAnchorA(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpPivotJointGetAnchorA(
      constraint,
    );
  }

  late final _cpPivotJointGetAnchorAPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpConstraint>)>>('cpPivotJointGetAnchorA');
  late final _cpPivotJointGetAnchorA = _cpPivotJointGetAnchorAPtr.asFunction<cpVect Function(ffi.Pointer<cpConstraint>)>();

  void cpPivotJointSetAnchorA(
    ffi.Pointer<cpConstraint> constraint,
    cpVect anchorA,
  ) {
    return _cpPivotJointSetAnchorA(
      constraint,
      anchorA,
    );
  }

  late final _cpPivotJointSetAnchorAPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpVect)>>('cpPivotJointSetAnchorA');
  late final _cpPivotJointSetAnchorA = _cpPivotJointSetAnchorAPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, cpVect)>();

  cpVect cpPivotJointGetAnchorB(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpPivotJointGetAnchorB(
      constraint,
    );
  }

  late final _cpPivotJointGetAnchorBPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpConstraint>)>>('cpPivotJointGetAnchorB');
  late final _cpPivotJointGetAnchorB = _cpPivotJointGetAnchorBPtr.asFunction<cpVect Function(ffi.Pointer<cpConstraint>)>();

  void cpPivotJointSetAnchorB(
    ffi.Pointer<cpConstraint> constraint,
    cpVect anchorB,
  ) {
    return _cpPivotJointSetAnchorB(
      constraint,
      anchorB,
    );
  }

  late final _cpPivotJointSetAnchorBPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpVect)>>('cpPivotJointSetAnchorB');
  late final _cpPivotJointSetAnchorB = _cpPivotJointSetAnchorBPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, cpVect)>();

  int cpConstraintIsPinJoint(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintIsPinJoint(
      constraint,
    );
  }

  late final _cpConstraintIsPinJointPtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpConstraint>)>>('cpConstraintIsPinJoint');
  late final _cpConstraintIsPinJoint = _cpConstraintIsPinJointPtr.asFunction<int Function(ffi.Pointer<cpConstraint>)>();

  ffi.Pointer<cpPinJoint> cpPinJointAlloc() {
    return _cpPinJointAlloc();
  }

  late final _cpPinJointAllocPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpPinJoint> Function()>>('cpPinJointAlloc');
  late final _cpPinJointAlloc = _cpPinJointAllocPtr.asFunction<ffi.Pointer<cpPinJoint> Function()>();

  ffi.Pointer<cpPinJoint> cpPinJointInit(
    ffi.Pointer<cpPinJoint> joint,
    ffi.Pointer<cpBody> a,
    ffi.Pointer<cpBody> b,
    cpVect anchorA,
    cpVect anchorB,
  ) {
    return _cpPinJointInit(
      joint,
      a,
      b,
      anchorA,
      anchorB,
    );
  }

  late final _cpPinJointInitPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpPinJoint> Function(ffi.Pointer<cpPinJoint>, ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect)>>('cpPinJointInit');
  late final _cpPinJointInit = _cpPinJointInitPtr.asFunction<ffi.Pointer<cpPinJoint> Function(ffi.Pointer<cpPinJoint>, ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect)>();

  ffi.Pointer<cpConstraint> cpPinJointNew(
    ffi.Pointer<cpBody> a,
    ffi.Pointer<cpBody> b,
    cpVect anchorA,
    cpVect anchorB,
  ) {
    return _cpPinJointNew(
      a,
      b,
      anchorA,
      anchorB,
    );
  }

  late final _cpPinJointNewPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpConstraint> Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect)>>('cpPinJointNew');
  late final _cpPinJointNew = _cpPinJointNewPtr.asFunction<ffi.Pointer<cpConstraint> Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect)>();

  cpVect cpPinJointGetAnchorA(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpPinJointGetAnchorA(
      constraint,
    );
  }

  late final _cpPinJointGetAnchorAPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpConstraint>)>>('cpPinJointGetAnchorA');
  late final _cpPinJointGetAnchorA = _cpPinJointGetAnchorAPtr.asFunction<cpVect Function(ffi.Pointer<cpConstraint>)>();

  void cpPinJointSetAnchorA(
    ffi.Pointer<cpConstraint> constraint,
    cpVect anchorA,
  ) {
    return _cpPinJointSetAnchorA(
      constraint,
      anchorA,
    );
  }

  late final _cpPinJointSetAnchorAPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpVect)>>('cpPinJointSetAnchorA');
  late final _cpPinJointSetAnchorA = _cpPinJointSetAnchorAPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, cpVect)>();

  cpVect cpPinJointGetAnchorB(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpPinJointGetAnchorB(
      constraint,
    );
  }

  late final _cpPinJointGetAnchorBPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpConstraint>)>>('cpPinJointGetAnchorB');
  late final _cpPinJointGetAnchorB = _cpPinJointGetAnchorBPtr.asFunction<cpVect Function(ffi.Pointer<cpConstraint>)>();

  void cpPinJointSetAnchorB(
    ffi.Pointer<cpConstraint> constraint,
    cpVect anchorB,
  ) {
    return _cpPinJointSetAnchorB(
      constraint,
      anchorB,
    );
  }

  late final _cpPinJointSetAnchorBPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpVect)>>('cpPinJointSetAnchorB');
  late final _cpPinJointSetAnchorB = _cpPinJointSetAnchorBPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, cpVect)>();

  double cpPinJointGetDist(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpPinJointGetDist(
      constraint,
    );
  }

  late final _cpPinJointGetDistPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpConstraint>)>>('cpPinJointGetDist');
  late final _cpPinJointGetDist = _cpPinJointGetDistPtr.asFunction<double Function(ffi.Pointer<cpConstraint>)>();

  void cpPinJointSetDist(
    ffi.Pointer<cpConstraint> constraint,
    double dist,
  ) {
    return _cpPinJointSetDist(
      constraint,
      dist,
    );
  }

  late final _cpPinJointSetDistPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpFloat)>>('cpPinJointSetDist');
  late final _cpPinJointSetDist = _cpPinJointSetDistPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, double)>();

  int cpConstraintIsGrooveJoint(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintIsGrooveJoint(
      constraint,
    );
  }

  late final _cpConstraintIsGrooveJointPtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpConstraint>)>>('cpConstraintIsGrooveJoint');
  late final _cpConstraintIsGrooveJoint = _cpConstraintIsGrooveJointPtr.asFunction<int Function(ffi.Pointer<cpConstraint>)>();

  ffi.Pointer<cpGrooveJoint> cpGrooveJointAlloc() {
    return _cpGrooveJointAlloc();
  }

  late final _cpGrooveJointAllocPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpGrooveJoint> Function()>>('cpGrooveJointAlloc');
  late final _cpGrooveJointAlloc = _cpGrooveJointAllocPtr.asFunction<ffi.Pointer<cpGrooveJoint> Function()>();

  ffi.Pointer<cpGrooveJoint> cpGrooveJointInit(
    ffi.Pointer<cpGrooveJoint> joint,
    ffi.Pointer<cpBody> a,
    ffi.Pointer<cpBody> b,
    cpVect groove_a,
    cpVect groove_b,
    cpVect anchorB,
  ) {
    return _cpGrooveJointInit(
      joint,
      a,
      b,
      groove_a,
      groove_b,
      anchorB,
    );
  }
